# libsimplenet

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  perf.yml
cmake/: Coverage.cmake  ProjectOptions.cmake  Sanitizers.cmake  libsimplenetConfig.cmake.in
docs/: Doxyfile.in  README.md
docs/development/: architecture.md  backends.md  coverage-report.md  doxygen-maintenance.md  performance-lab-log.md  performance-notes.md  testing-and-coverage.md
docs/development/perf-data/: 2026-02-19-async-iteration4-notes.md  2026-02-19-callgrind-async-boost-epoll.out  2026-02-19-callgrind-async-boost-epoll.txt  2026-02-19-callgrind-async-libsimplenet-epoll.out  2026-02-19-callgrind-async-libsimplenet-epoll.txt  2026-02-19-hyperfine-churn-64.txt  2026-02-19-hyperfine-echo-16k.txt  2026-02-19-hyperfine-idle.txt  2026-02-19-perfstat-async-boost-epoll-1024.out  2026-02-19-perfstat-async-boost-epoll-1024.txt  2026-02-19-perfstat-async-libsimplenet-epoll-1024.out  2026-02-19-perfstat-async-libsimplenet-epoll-1024.txt  2026-02-19-perfstat-async-libsimplenet-io_uring-1024.out  2026-02-19-perfstat-async-libsimplenet-io_uring-1024.txt  2026-02-19-suite-release-v2.csv  2026-02-19-suite-release-v3.csv  2026-02-19-suite-release-v4.csv  2026-02-19-suite-release-v5.csv  2026-02-19-suite-release.csv  2026-02-20-suite-release-v6.csv  README.md
docs/usage/: api-reference.md  backend-selection.md  doxygen-generated-api.md  examples.md  quickstart.md
example/: CMakeLists.txt  backend_switch.cpp  echo_client.cpp  echo_server.cpp  perf_async_echo_boost_asio.cpp  perf_async_echo_libsimplenet.cpp  perf_boost_asio_wait.cpp  perf_connection_churn_boost_asio.cpp  perf_connection_churn_libsimplenet.cpp  perf_reactor_wait.cpp  perf_tcp_echo_boost_asio.cpp  perf_tcp_echo_libsimplenet.cpp
include/simplenet/: io_context.hpp  ip_tcp.hpp  simplenet.hpp
include/simplenet/blocking/: endpoint.hpp  tcp.hpp  udp.hpp
include/simplenet/core/: error.hpp  result.hpp  unique_fd.hpp
include/simplenet/epoll/: reactor.hpp
include/simplenet/nonblocking/: tcp.hpp
include/simplenet/runtime/: cancel.hpp  engine.hpp  event_loop.hpp  io_ops.hpp  resolver.hpp  task.hpp  uring_event_loop.hpp  write_queue.hpp
include/simplenet/uring/: reactor.hpp
planning/: ROADMAP.md
planning/plans/: 00-overall-plan.md  01-foundation-build-plan.md  02-runtime-backends-plan.md  03-api-usability-plan.md  04-test-coverage-plan.md  05-docs-examples-plan.md  06-review-loop-plan.md
scripts/: generate_perf_figures.py  run_perf_suite.sh  setup_devcontainer_deps.sh
src/blocking/: endpoint.cpp  socket_helpers.cpp  socket_helpers.hpp  tcp.cpp  udp.cpp
src/core/: error.cpp  unique_fd.cpp
src/epoll/: reactor.cpp
src/nonblocking/: tcp.cpp
src/runtime/: engine.cpp  event_loop.cpp  io_ops.cpp  resolver.cpp  uring_event_loop.cpp  write_queue.cpp
src/uring/: reactor.cpp
tests/: CMakeLists.txt
tests/integration/: test_blocking_tcp.cpp  test_blocking_udp.cpp  test_epoll_reactor.cpp  test_runtime_backpressure.cpp  test_runtime_coroutines.cpp  test_runtime_engine.cpp  test_runtime_resolver.cpp  test_runtime_timers.cpp  test_runtime_uring.cpp  test_uring_reactor.cpp
tests/scripts/: assert_failing_command.sh
tests/unit/: test_error.cpp  test_result.cpp  test_unique_fd.cpp
